# moodle-storage-tui

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml  release.yml
docs/: MOODLE_API.md
src/: main.cpp
src/commands/: command.hpp  delete_command.hpp  download_command.hpp  history_command.hpp  list_command.hpp  login_command.hpp  logout_command.hpp  mkdir_command.hpp  upload_command.hpp  usage_command.hpp
src/core/: application.hpp  session_helper.hpp  session_manager.hpp  updater.cpp  updater.hpp  version.hpp
src/models/: models.hpp
src/moodle/: moodle_client.hpp  shibboleth_auth.hpp
src/network/: http_client.hpp
src/storage/: upload_history.hpp
src/tui/: theme.hpp  tui_application.cpp  tui_application.hpp  tui_context.cpp  tui_context.hpp
src/tui/views/: browser_view.cpp  browser_view.hpp  delete_view.cpp  delete_view.hpp  download_view.cpp  download_view.hpp  history_view.cpp  history_view.hpp  login_view.cpp  login_view.hpp  main_menu_view.cpp  main_menu_view.hpp  mkdir_view.cpp  mkdir_view.hpp  settings_view.cpp  settings_view.hpp  themes_view.cpp  themes_view.hpp  upload_view.cpp  upload_view.hpp  views.hpp
src/utils/: logger.hpp
tests/: CMakeLists.txt  mock_http_client.hpp  test_commands.cpp  test_history_manager.cpp  test_moodle_client.cpp  test_session_manager.cpp  test_tui.cpp  test_updater.cpp
tests/fixtures/: files_page.html
themes/: catppuccin_frappe.conf  catppuccin_latte.conf  catppuccin_macchiato.conf  catppuccin_mocha.conf  dracula.conf  everforest_dark.conf  gruvbox_dark.conf  gruvbox_light.conf  nord.conf  one_dark.conf  solarized_dark.conf  tokyo_night.conf
